force-app/main/default/objects/Lets_Talk__c/Lets_Talk__c.object-meta.xml
<CustomObject>
    <label>Lets Talk</label>
    <nameField>
        <label>Nombre de Lets Talk</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lets Talk</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>