force-app/main/default/objects/Lets_Talk__c/fields/Asunto__c.field-meta.xml
<CustomField>
    <fullName>Asunto__c</fullName>
    <label>Asunto</label>
    <length>200</length>
    <type>Text</type>
</CustomField>