force-app/main/default/objects/Lets_Talk__c/fields/CC__c.field-meta.xml
<CustomField>
    <fullName>CC__c</fullName>
    <inlineHelpText>Separar email con punto y coma &apos;;&apos;</inlineHelpText>
    <label>CC</label>
    <length>200</length>
    <type>Text</type>
</CustomField>