force-app/main/default/objects/Lets_Talk__c/fields/Contrato__c.field-meta.xml
<CustomField>
    <fullName>Contrato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrato</label>
    <referenceTo>Contrato__c</referenceTo>
    <relationshipLabel>Lets Talk</relationshipLabel>
    <relationshipName>Lets_Talk</relationshipName>
    <type>Lookup</type>
</CustomField>