force-app/main/default/objects/Lets_Talk__c/fields/Destinatarios__c.field-meta.xml
<CustomField>
    <fullName>Destinatarios__c</fullName>
    <inlineHelpText>Separar email con punto y coma &apos;;&apos;</inlineHelpText>
    <label>Destinatarios</label>
    <length>200</length>
    <type>Text</type>
</CustomField>