force-app/main/default/objects/Lets_Talk__c/fields/Fecha_envio_correo__c.field-meta.xml
<CustomField>
    <fullName>Fecha_envio_correo__c</fullName>
    <label>Fecha envio correo</label>
    <type>DateTime</type>
</CustomField>