force-app/main/default/objects/Lets_Talk__c/fields/Proyecto__c.field-meta.xml
<CustomField>
    <fullName>Proyecto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proyecto</label>
    <referenceTo>Proyecto__c</referenceTo>
    <relationshipLabel>Lets Talk</relationshipLabel>
    <relationshipName>Lets_Talk</relationshipName>
    <type>Lookup</type>
</CustomField>