force-app/main/default/objects/Lets_Talk__c/fields/Responsable_SAP__c.field-meta.xml
<CustomField>
    <fullName>Responsable_SAP__c</fullName>
    <formula>Proyecto__r.Responsable_email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Responsable SAP</label>
    <type>Text</type>
</CustomField>