force-app/main/default/objects/Lets_Talk__c/fields/Responsable_SAP_contrato__c.field-meta.xml
<CustomField>
    <fullName>Responsable_SAP_contrato__c</fullName>
    <formula>Contrato__r.Responsable_SAP_email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Responsable SAP</label>
    <type>Text</type>
</CustomField>