force-app/main/default/objects/Lets_Talk__c/fields/Respuesta_Asunto__c.field-meta.xml
<CustomField>
    <fullName>Respuesta_Asunto__c</fullName>
    <label>Respuesta Asunto</label>
    <length>200</length>
    <type>Text</type>
</CustomField>