force-app/main/default/objects/Lets_Talk__c/fields/Respuesta_Cuerpo_Mensaje__c.field-meta.xml
<CustomField>
    <fullName>Respuesta_Cuerpo_Mensaje__c</fullName>
    <label>Respuesta Mensaje</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>