force-app/main/default/objects/Lets_Talk__c/recordTypes/Lets_talk_Contrato.recordType-meta.xml
<RecordType>
    <fullName>Lets_talk_Contrato</fullName>
    <active>true</active>
    <label>Lets talk Contrato</label>
</RecordType>