force-app/main/default/objects/Lets_Talk__c/recordTypes/Lets_talk_Proyecto.recordType-meta.xml
<RecordType>
    <fullName>Lets_talk_Proyecto</fullName>
    <active>true</active>
    <label>Lets talk Proyecto</label>
</RecordType>