force-app/main/default/objects/Lets_Talk__c/listViews/Charlemos_Contrato.listView-meta.xml
<ListView>
    <fullName>Charlemos_Contrato</fullName>
    <columns>NAME</columns>
    <columns>Contrato__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contrato__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Charlemos Contrato</label>
    <sharedTo>
        <role>Presidencia</role>
        <role>Supervision</role>
    </sharedTo>
</ListView>