force-app/main/default/objects/Lets_Talk__c/listViews/Charlemos_Proyecto.listView-meta.xml
<ListView>
    <fullName>Charlemos_Proyecto</fullName>
    <columns>NAME</columns>
    <columns>Proyecto__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Proyecto__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Charlemos Proyecto</label>
    <sharedTo>
        <role>Presidencia</role>
        <role>Supervision</role>
    </sharedTo>
</ListView>